图片下载完成

--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -13,3 +13,11 @@
     text-align: center;
     font-size: 18px;
 }
+
+.parent-container-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
